Apply modernizer plugin to pulsar-client modules.